# mod-updater

./: .gitignore  Cargo.toml  README.md  modlist.txt  response.json
src/: lib.rs  main.rs  modrinth.rs
