[package]
name = "mod-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", features = ["derive"] }
tokio = {version = "1.21.2", features = ["full"]}
tokio-macros = { version = "0.2.0-alpha.6" }
