[package]
name = "mod-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9"
time = { version = "0.3.37", features = ["serde", "parsing"] }
time-macros = { version = "0.2.0-alpha.1" }
tokio = {version = "1.21.2", features = ["full"]}
tokio-macros = { version = "0.2.0-alpha.6" }