[package]
name = "mod-updater"
version = "0.2.1"
edition = "2021"
description = "A CLI tool to manage Minecraft mods downloaded from Modrinth"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9"
time = { version = "0.3.37", features = ["serde", "parsing"] }
time-macros = { version = "0.2.0-alpha.1" }
tokio = {version = "1.43.1", features = ["full"]}
tokio-macros = { version = "0.2.0-alpha.6" }
